--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,1 +1,18 @@
-
+body {
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    height: 100vh;
+    font-family: sans-serif;
+    background-size: cover;
+    /*noinspection CssUnknownTarget*/
+    /* background-image: url("../img/matrix-356024_1920.jpg"); */
+    background-image: url("../src/img/matrix-356024_1920.jpg");
+  }
+  /* #root {
+    width: 100vw;
+    height: 100vh;
+    opacity: 0.65;
+    background: black;
+  } */
+  
