--- a/client/src/components/home.css
+++ b/client/src/components/home.css
@@ -3,7 +3,7 @@
     src: url('../fonts/Selly_Calligraphy.ttf');
   }
 
-  form{
+  #home {
     top: 50%;
     left: 50%;
     color: white;
@@ -14,15 +14,15 @@
     background: none;
     font-weight: 400;
   }
-  form h1 {
+  #home h1 {
     color: #55efc4;
     font-size: 50px;
     font-family: 'Selly_Calligraphy', sans-serif ;
   }
-  form h3 {
+  #home h3 {
     letter-spacing: 0.5px;
   }
-  input[type="submit"] {
+  #home input[type="submit"] {
     /*width: 50px;*/
     color: white;
     border: 1px solid #55efc4;
@@ -31,7 +31,7 @@
     background: none;
     border-radius: 15px;
   }
-  input[type="submit"]:hover {
+  #home input[type="submit"]:hover {
     cursor: pointer;
     outline: none;
     background: #55efc4;
