--- a/client/src/components/choose_game.css
+++ b/client/src/components/choose_game.css
@@ -5,3 +5,24 @@
     text-align: center;
     transform: translate(-50%, -50%);
 }
+
+#chooseGame input[ type = "submit" ] {
+    /* top: 50%;
+    left: 50%; */
+    display: block;
+    /* position: absolute; */
+    color: white;
+    border: 0.5px solid #55efc4;
+    cursor: pointer;
+    margin: 20px auto;
+    display: block;
+    padding: 14px 40px;
+    outline: none;
+    background: none;
+    text-align: center;
+    transition: 0.5s;
+    border-radius: 24px;
+}
+#chooseGame input[ type = "submit"]:hover {
+    background: #55efc4;
+}
